/*
 * $Id: ChangeLog,v 1.3540 2004/10/25 20:19:21 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-10-25 17:37 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/calconst.c
    + Added shortcut logic to && and || support in #if and #elif directives.
    + Added support for Identifiers in NextTokenInConstant()
      /* Undefined IDs evaluates to 0 instead of an expression error (like C compilers) */
    * Revised to use C macros isdigit() isxdigit() isalpha() and isalnum)

  * source/rtl/terror.prg
    + Added Error() to provide a default class function
    + Added INLINE New() to return Self (Class(y) compatability)

2004-10-25 15:15 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/gtapi.c
    ! Fixed startup for consoles with 0,0 max coords. (i.e. bcc32 -tW)

2004-10-25 10:28 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * include/hbapigt.h
    * Corrected usage of HB_EXPORT with complex types.

  * source/pp/ppcore.c
    + Added implementation of defined() pseudo function in #if and #elif directives.

2004-10-25 12:01 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/gtapi.c
    ! Fixed for not cursor repositioning to 0,0 at startup.

2004-10-25 15:15 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtapi.c
    * changed default clear character from chr(255) to ' '
      Clipper uses 255 but we cannot. Not all platform/character sets
      uses 255 as blank char

2004-10-25 14:35 UTC+0700 Budyanto Dj. <budyanto@centrin.net.id>
  + contrib/gtwvw
  + contrib/gtwvw/gtwvw.c
  + contrib/gtwvw/hbgtwvw.h
  + contrib/gtwvw/makefile.bc
  + contrib/gtwvw/make_b32.bat

  /* latest version of gtwvw */

2004-09-24 20:06 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * hrbdll.bc
  * makefile.bc
  * hrbdll.vc
  * hrbdll.wc